ZFIN-8629 add filtering to phenotype table on publication page. (#671)
* ZFIN-8629 add filtering to phenotype table on publication page.

* ZFIN-8629 small refactoring